--- a/package.json
+++ b/package.json
@@ -28,11 +28,6 @@
     "dependencies": {
         "xtend": "4.0.1"
     },
-    "licenses": [
-        {
-            "type": "AGPLv3",
-            "url": "https://www.gnu.org/licenses/agpl-3.0.de.html"
-        }
-    ],
+    "license": "AGPL-3.0",
     "readmeFilename": "README.md"
 }
